<resources>
    <string name="app_name">QuotesAndroidApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- nav_header_main strings-->
    <string name="nav_header_big_text">Quotes App</string>
    <string name="nav_header_small_text">quotesapp.com</string>

    <!-- activity_main_drawer strings-->

    <string name="nav_home_text">Home</string>
    <string name="nav_quotes_text">All Quotes</string>
    <string name="nav_fav_text">Favorites</string>
    <string name="nav_categories_text">Categories</string>
    <string name="nav_settings_text">Settings</string>
    <string name="nav_about_text">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_single_quote">SingleQuoteActivity</string>
    <string name="pref_notification_summary">get daily notification with a different quote</string>
    <string name="pref_notification_title">Daily quote notification</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_quotes_of_acategory">QuotesOfACategory</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
</resources>
