<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <!-- TODO edit icons -->

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home_text" />
        <item
            android:id="@+id/nav_all_quotes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_quotes_text" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_fav_text" />
        <item

            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_categories_text" />
    </group>


    <item android:title="">
        <menu>
            <item

                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_settings_text" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_about_text" />
        </menu>
    </item>


</menu>
